3.0.5:
- Reverted previous busy dialog fix because it's not needed anymore
- Cleanup & repo push

3.0.4:
- fixed addon info labels

3.0.3:
- repo push

3.0.2:
- preload timeout fixes

3.0.1:
Krypton repo release
- Renamed skin ID. Please create and import an backup of the Jarvis Krypton version.