@@ -1,5 +1,6 @@
 3.0.5:
 - Reverted previous busy dialog fix because it's not needed anymore
+- Added a more secure check that widget animations are going to be triggered, even if there is an delay of other conditions
 - Cleanup & repo push
 
 3.0.4:
